crates/ink/tests/ui/contract/fail/message-hygiene-try.rs
#[ink::contract]
mod contract {
    #[ink(storage)]
    pub struct Contract {}

    impl Contract {
        #[ink(constructor)]
        pub fn constructor() -> Self {
            Self {}
        }

        #[ink(message)]
        pub fn message(&self) {}

        #[ink(message)]
        pub fn try_message(&self) {}
    }
}

fn main() {}
