crates/ink/tests/ui/contract/fail/message-hygiene-try.stderr
error[E0592]: duplicate definitions with name `try_message`
  --> tests/ui/contract/fail/message-hygiene-try.rs:16:9
   |
1  | #[ink::contract]
   | ---------------- other definition for `try_message`
...
16 |         pub fn try_message(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `try_message`
